Fixed the html overflow of x

--- a/style.css
+++ b/style.css
@@ -1,21 +1,44 @@
 /* font-family: 'Montserrat', sans-serif;
 font-family: 'Poppins', sans-serif; */
+html {
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
 body {
   padding: 0;
   margin: 0;
   text-decoration: none;
   list-style: none;
   background-color: #fff;
+  overflow-x: hidden;
+}
+img {
+  max-width: 100%;
 }
 /* nav css */
+/* xs */
+/* @media (min-width: 475px) {} */
+
+/* sm */
+/* @media (min-width: 640px) {} */
+
+/* md */
+/* @media (min-width: 768px) {} */
+
+/* lg */
+/* @media (min-width: 1024px) {} */
+
+/* xl */
+/* @media (min-width: 1280px) {} */
+
+/* 2xl */
+/* @media (min-width: 1536px) {} */
 head {
   display: flex;
   justify-content: space-around;
   font-family: 'Montserrat', sans-serif;
 }
-img {
-  max-width: 100%;
-}
+
 .logo {
   display: flex;
   align-self: center;
